# ChangeLog for sci-astronomy/libsextractor
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libsextractor-2.4.4.3 (29 Feb 2012)

  29 Feb 2012; Sébastien Fabbro <bicatali@gentoo.org>
  +libsextractor-2.4.4.3.ebuild, +metadata.xml:
  Renamed to libsextractor

*libsex-2.4.4.3 (03 Aug 2011)

  03 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> -libsex-2.4.4.2.ebuild,
  +libsex-2.4.4.3.ebuild:
  Version bump

*libsex-2.4.4.2 (04 Oct 2010)

  04 Oct 2010; Sébastien Fabbro <bicatali@gentoo.org>
  -libsex-2.4.4.1.ebuild, +libsex-2.4.4.2.ebuild:
  Bump

  04 Oct 2010; Sébastien Fabbro <bicatali@gentoo.org>
  libsex-2.4.4.1.ebuild:
  now pulling tar ball source from home page

*libsex-2.4.4.1 (27 Aug 2010)

  27 Aug 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +libsex-2.4.4.1.ebuild, +metadata.xml:
  Initial import
