@@ -1,4 +1,14 @@
-DIST libsextractor-2.4.4.3.tar.gz 1467175 RMD160 e489a1f14dd762b6f3c64729e7f189be59d39be5 SHA1 96c2355760253bfc4498fd052d43eae1abcf06e1 SHA256 2ecfb30b07ca6f9789161c9a05aeaba1cea2eea706dc47bfbf17d8b32b750f96
-EBUILD libsextractor-2.4.4.3.ebuild 809 RMD160 deb11af76a09e55ce7fed5f08575bbe5f1894d1c SHA1 5f8e10fc57b470f5e405fd1f4ff38ad26c0a7005 SHA256 284ccbd0eda8b54acc2739ff22b491770e1b5196f9d032421a1dd1e655ad1c7a
-MISC ChangeLog 864 RMD160 1d2859009d4ec7a93e5eba2bfcc8da24da4c54ca SHA1 c1e25cd7660fe5d5c7aaec8256fb4fb6a89e9db2 SHA256 d23f319fe1b575d2621c40852e345bc112685068dea05595831ddcd3cd45c9e2
-MISC metadata.xml 677 RMD160 c8dcd5289fae43eb2eb8a673656acb01f2a821c5 SHA1 670d2efddee98226cae869d284199bfe6ceb3b6c SHA256 756bca707aba7d7377df4f94677f367578b36ae9ea82c2447deedade289e70eb
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST libsextractor-2.4.4.3.tar.gz 1467175 SHA256 2ecfb30b07ca6f9789161c9a05aeaba1cea2eea706dc47bfbf17d8b32b750f96
+EBUILD libsextractor-2.4.4.3.ebuild 781 SHA256 1381ce44dd850f231570c1c3108267d58d50f51348deaced9a03d07411ad439b SHA512 199b674af2eca67758461f7289fce5358bb9662c1342edb0445a448fb3d203f27d6b14a0217cce4d0be47bf403e8ca7ac829a1c99113ea5bdcf2851d308007d8 WHIRLPOOL 973c6aa75bcba5874a54e3b8dd07ff7c5382390a67cc8f4b239899c5aaa264fa532103d28f97ca4772774874297415a73cd2dc85ba7e1d6a6a982bc12d78d84a
+MISC ChangeLog 864 SHA256 d23f319fe1b575d2621c40852e345bc112685068dea05595831ddcd3cd45c9e2 SHA512 d67c132030bb6efd045eaaac5b89be30ced2db2b3bac3f5a67887dfac8fdbea4b5b5f4ad78514a3121d8f900c2397e16beb757fd93ec5251b979cda7c1c8aa75 WHIRLPOOL fedd3ac3f6213da30997928140ee41fd37f1a71d616bc582c32113c72fe51f78803dd6d0add982d981bd93ab25722becae14cd30c1ed713f39d6f79bad8cdc64
+MISC metadata.xml 720 SHA256 9b809cf5633e9fea9bf561d25fe4277e44db53fb77fb4adbdd1673427bbe891b SHA512 dba0231bf1484ced2e61dcd1d7ceaf54bd7dcfdd479856779b73ae5a3b82fc46c68e74ce9235bccbe16f4342a7747533aea901640ee6983dadb2814472ec6eed WHIRLPOOL e590ebf4b7e41d619ea8b04385dcfe4d725a35f95edc5d6b5233d241eace8f6508d78d496a180f97f0ed4374e3f73d453d14c8b392a2aebe5b0e3ca6199a2cbe
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlAVf8kACgkQ1ycZbhPLE2AcNgCdFCyROM4MJZADvDzXbcarRMOa
+mHIAoIYgfdHmRYVvILZcn+vHILCYAu1Z
+=GTes
+-----END PGP SIGNATURE-----
